[gd_scene load_steps=11 format=3 uid="uid://d1awu0ow3c2wm"]

[ext_resource type="FontFile" uid="uid://bsbn6wphuu3nh" path="res://Resources/Font.ttf" id="1_0uopk"]
[ext_resource type="Script" path="res://Main Menu.gd" id="1_82sp1"]
[ext_resource type="AudioStream" uid="uid://dtuhnr87k4f8k" path="res://Resources/Background.mp3" id="3_mxjka"]
[ext_resource type="AudioStream" uid="uid://by4q71mfeau6c" path="res://Resources/Sound Effects/Whoosh.wav" id="4_08p45"]

[sub_resource type="FontVariation" id="FontVariation_3tpsb"]
base_font = ExtResource("1_0uopk")

[sub_resource type="FontVariation" id="FontVariation_mdyk5"]
base_font = ExtResource("1_0uopk")

[sub_resource type="Animation" id="Animation_sn4a0"]
resource_name = "Show Leaderboard"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(1024, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Music:volume_db")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="Animation" id="Animation_67k8w"]
resource_name = "Begin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Name:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(384, 768), Vector2(384, 256)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Start:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(384, 832), Vector2(384, 384)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Leaderboard:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(384, 896), Vector2(384, 512)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Music")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Title:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -128), Vector2(0, 64)]
}

[sub_resource type="Animation" id="Animation_g0lmn"]
resource_name = "Start Game"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(1024, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/ColorRect:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Music:volume_db")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7brd"]
_data = {
"Begin": SubResource("Animation_67k8w"),
"Show Leaderboard": SubResource("Animation_sn4a0"),
"Start Game": SubResource("Animation_g0lmn")
}

[node name="Main Menu" type="Node"]
script = ExtResource("1_82sp1")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
offset_right = 1024.0
offset_bottom = 768.0
color = Color(0, 0, 0, 0)

[node name="Title" type="Label" parent="."]
offset_top = -128.0
offset_right = 1024.0
theme_override_fonts/font = SubResource("FontVariation_3tpsb")
theme_override_font_sizes/font_size = 64
text = "Hidden Amongst"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="."]
offset_left = 384.0
offset_top = 832.0
offset_right = 640.0
offset_bottom = 896.0
theme_override_fonts/font = SubResource("FontVariation_mdyk5")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="Leaderboard" type="Button" parent="."]
offset_left = 384.0
offset_top = 896.0
offset_right = 640.0
offset_bottom = 960.0
theme_override_fonts/font = SubResource("FontVariation_mdyk5")
theme_override_font_sizes/font_size = 32
text = "Leaderboard"

[node name="Name" type="TextEdit" parent="."]
offset_left = 384.0
offset_top = 768.0
offset_right = 640.0
offset_bottom = 832.0
theme_override_fonts/font = SubResource("FontVariation_mdyk5")
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter Name"

[node name="Animator" type="AnimationPlayer" parent="."]
autoplay = "Begin"
libraries = {
"": SubResource("AnimationLibrary_f7brd")
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mxjka")

[node name="Whoosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_08p45")
pitch_scale = 0.8
autoplay = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="text_changed" from="Name" to="." method="_on_text_edit_text_changed"]
[connection signal="animation_finished" from="Animator" to="." method="_on_animator_animation_finished"]
